# coolblue-assignment

./: .gitignore  README.md  docker-compose.yaml  example.sh
mockdelivery/: .env.local  Dockerfile  README.md  points.json  pyproject.toml
mockdelivery/mockdelivery/: main.py  points.py
pathfinder/: .env.local  Dockerfile  README.md  pyproject.toml
pathfinder/pathfinder/: container.py  main.py  utils.py
pathfinder/pathfinder/model/: error.py  problem.py  problem_message.py  solution.py  solution_message.py
pathfinder/pathfinder/resource/: rabbit_connection.py
pathfinder/pathfinder/service/: base.py  rabbit_listener.py  routing_algorithm.py
pathfinder/tests/: conftest.py  test_algorithm.py  test_distance.py  test_rabbit_listener.py
pathfinder/tests/data/: capitals_problem.json  capitals_solution.json
pathfinder/tests/mock/: rabbit.py  routing_algorithm.py
