[tool.poetry]
name = "pathfinder"
version = "0.1.0"
description = ""
authors = ["bitizen248 <van4011@yandex.ru>"]
readme = "README.md"
packages = [{include = "pathfinder"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ortools = "^9.6.2534"
pika = "^1.3.1"
pydantic = "^1.10.7"
dependency-injector = "^4.41.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

